--- a/LogenCode/LogenCode/LogenCode.csproj
+++ b/LogenCode/LogenCode/LogenCode.csproj
@@ -57,7 +57,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
-      <HintPath>..\..\System.Data.SQLite.dll</HintPath>
+      <HintPath>Lib\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
