--- a/LogenCodeX/LogenCodeX.Android/Properties/AndroidManifest.xml
+++ b/LogenCodeX/LogenCodeX.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.smok95.logencode" android:versionName="1.3" android:versionCode="4">
-	<uses-sdk android:minSdkVersion="15" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.smok95.logencode" android:versionName="1.4" android:versionCode="5">
+	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="27" />
 	<application android:icon="@drawable/icon" android:label="로젠택배 지점코드"></application>
 </manifest>
