서초동 관할지점 분리

--- a/LogenCodeX/LogenCodeX.Android/LogenCodeX.Android.csproj
+++ b/LogenCodeX/LogenCodeX.Android/LogenCodeX.Android.csproj
@@ -128,8 +128,10 @@
     <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\logencode190527.sqlite" />
-    <None Include="packages.config" />
+    <AndroidAsset Include="Assets\logencode190701.sqlite" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\SplashScreen.axml">
