--- a/logencode_flutter/pubspec.yaml
+++ b/logencode_flutter/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   tinycolor: ^1.0.2
   google_fonts: ^0.3.8
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
