--- a/logencode_flutter/android/app/src/main/AndroidManifest.xml
+++ b/logencode_flutter/android/app/src/main/AndroidManifest.xml
@@ -44,5 +44,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"                           
+            android:value="ca-app-pub-0843163070431190~4239982042"/>            
     </application>
 </manifest>
