--- a/logencode_flutter/pubspec.yaml
+++ b/logencode_flutter/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.1.2+15
+version: 2.2.0+16
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,6 +32,15 @@ dependencies:
   tinycolor: ^1.0.2
   google_fonts: ^0.3.8
   flutter_webview_plugin: ^0.3.11
+  admob_flutter: ^0.3.4
+  share: ^0.6.4+3
+  url_launcher: ^5.5.0
+  get: ^3.4.1
+  settings_ui: ^0.3.0
+  package_info: ^0.4.1
+  http: ^0.12.2
+  intl: ^0.16.1
+  connectivity: ^0.4.9
 
 dev_dependencies:
   flutter_test:
