--- a/logencode_flutter/android/app/build.gradle
+++ b/logencode_flutter/android/app/build.gradle
@@ -75,6 +75,8 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"    
+    // Bug fixes, including a fix for a concurrent modification exception.
+    // implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:17.2.3'
 }
