--- a/logencode_flutter/pubspec.yaml
+++ b/logencode_flutter/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.4.0+18
+version: 2.5.0+19
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -28,8 +28,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  tinycolor: ^1.0.2
+  cupertino_icons: ^0.1.3  
   google_fonts: ^0.3.8
   flutter_webview_plugin: ^0.3.11
   admob_flutter: ^0.3.4
@@ -39,8 +38,10 @@ dependencies:
   settings_ui: ^0.3.0
   package_info: ^0.4.1
   http: ^0.12.2
-  intl: ^0.16.1
-  connectivity: ^0.4.9
+  intl: ^0.16.1  
+  connectivity: ^0.4.9+3
+  draggable_scrollbar: ^0.0.4
+  bordered_text: ^1.0.0
 
 dev_dependencies:
   flutter_test:
