오래된 패키지들 업데이트(작업 진행중)

--- a/logencode_flutter/android/gradle.properties
+++ b/logencode_flutter/android/gradle.properties
@@ -1,5 +1,21 @@
-org.gradle.jvmargs=-Xmx1536M
+#org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
 android.bundle.enableUncompressedNativeLibs=false
+
+# 2022.02.26 kim,jk
+# Android Studio에서 Gradle:Build model... 단계가 너무 느려서 추가함.
+# https://stackoverflow.com/questions/45327617/very-very-slow-gradle-build-on-android-studio
+# Enable Gradle Daemon
+org.gradle.daemon=true
+# Enable Configure on demand
+org.gradle.configureondemand=true
+# Enable parallel builds
+org.gradle.parallel=true
+# Enable Build Cache
+android.enableBuildCache=true
+# Enable simple gradle caching
+org.gradle.caching=true
+# Increase memory allotted to JVM
+org.gralde.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -xx:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
