--- a/logencode_flutter/android/app/src/main/AndroidManifest.xml
+++ b/logencode_flutter/android/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="${applicationName}"
         android:label="로젠택배 지점코드"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:exported="true"
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
